# ebird-dashboard

./: README.md  app.py  app_logging.py  mapper.py  pyproject.toml  sightings.py
data/raw/: MyEBirdData.csv
docs/: tools.md
notebooks/: eBird_data-eda.ipynb  eBird_data-map.ipynb
tests/: test_mapper.py  test_sightings.py
